dark mode resolve with final student signup

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -2,12 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
+.dark,
+:root[class="dark"]{
+  html,
+  .body {
 
-  @apply bg-white dark:bg-gray-950;
+    @apply bg-white dark:bg-gray-950;
 
-  @media (prefers-color-scheme: dark) {
-    color-scheme: dark;
+    @media (prefers-color-scheme: dark) {
+      color-scheme: dark;
+    }
   }
 }
+
+
+
